java17 changes + code update